[check-manifest]
ignore =
    requirements.txt
    runtests.py
    tsconfig.json
    
[metadata]
name = btgitserver
author = Engelbert Tejeda
author_email = berttejeda@gmail.com
description = Python-based Git Server
version = file: VERSION.txt
url = https://github.com/berttejeda/bert.git-server
keywords =
  yaml 
  configuration
  config
  file
  python
  settings
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3.7
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
include_package_data = true
python_requires = >= 3.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
  wheel >= 0.31
packages = find:
zip_safe: False
scripts =
#  somescript.py
install_requires =
  btconfig>=6.0.0
  coloredlogs>=15.0.0,<16.0
  dulwich==1.2.6
  setuptools==82.0.1
  Flask==3.1.3
  Flask-HTTPAuth==4.8.1
  gunicorn==26.0.0

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  bt.git-server=btgitserver.app:start_api

[options.data_files]
